--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -17,3 +17,18 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--   💰 document.getElementById('root') -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+
+<body>
+  <script type="module">
+    // const rootElement = document.getElementById('root')
+
+    //To create the root node
+    const rootElement = document.createElement('div')
+    rootElement.setAttribute('id', 'root')
+    document.body.append(rootElement)
+
+    const element = document.createElement('div')
+    element.textContent = 'Hello world'
+    rootElement.append(element)
+  </script>
+</body>
