--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -8,13 +8,27 @@
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
+    function Message({children}) {
+      return <div className="message">{children}</div>
+    }
+
+    Message.propTypes = {
+      subject(props, propName, componentName) {
+        const type = typeof props[propName]
+        if (type !== 'string') {
+          return new Error(
+            `Hey! Component ${componentName} needs the prop ${propName} to blablabla`,
+          )
+        }
+      },
+    }
 
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
     const element = (
       <div className="container">
-        <div className="message">Hello World</div>
-        <div className="message">Goodbye World</div>
+        <Message>Hello World</Message>
+        <Message>Goodbye World</Message>
       </div>
     )
 
